fix: 打包基本配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,11 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
     "noImplicitAny": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+
     "paths": {
       "xph-crud/*": ["./packages/*"]
     }
