--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "peerDependencies": {
     "@ant-design/icons": "5.3.2",
     "antd": "^5.14.2",
