--- a/example/package.json
+++ b/example/package.json
@@ -22,7 +22,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "xph-crud": "workspace:^"
+    "xph-crud": "latest"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
