--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,10 @@ jobs:
         run: pnpm install # 使用 pnpm 安装依赖
 
       - name: Build
-        run: pnpm run build:example # 使用 pnpm 进行构建
+        run: pnpm run build:docs # 使用 pnpm 进行构建
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./example/build
+          publish_dir: ./docs/build
