--- a/docs/package.json
+++ b/docs/package.json
@@ -24,8 +24,9 @@
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
     "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "xph-crud": "^0.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
