--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
       "xph-crud/*": ["./packages/*"]
     }
   },
-  "include": ["test", "packages"],
+  "include": ["packages"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
