--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,7 @@
     "@ant-design/icons": "5.3.2",
     "@docusaurus/core": "3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
+    "@docusaurus/theme-live-codeblock": "^3.4.0",
     "@mdx-js/react": "^3.0.0",
     "antd": "^5.14.2",
     "clsx": "^2.0.0",
@@ -25,8 +26,7 @@
     "lodash-es": "^4.17.21",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "xph-crud": "^0.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
