--- a/docs/package.json
+++ b/docs/package.json
@@ -26,7 +26,8 @@
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-live": "^4.1.7"
+    "react-live": "^4.1.7",
+    "examples": "workspace:*"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
