--- a/examples/package.json
+++ b/examples/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "name": "examples",
-  "main": "dist/entry.ts",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {},
   "dependencies": {
     "@ant-design/icons": "5.3.2",
