--- a/examples/package.json
+++ b/examples/package.json
@@ -4,12 +4,16 @@
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "scripts": {},
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.0",
     "@ant-design/icons": "5.3.2",
     "antd": "^5.14.2",
     "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
-    "react": "^18.2.0",
     "react-router-dom": "^6.23.1"
   }
 }
