--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "tsc && vite build --mode main",
     "build:examples": "tsc && vite build --mode examples",
     "docs": "cd docs && npm run start",
-    "build:docs": "npm run build:examples && cd docs && npm run build",
+    "build:docs": "cd docs && npm run build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "files": [
@@ -45,8 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.9.1",
-    "@ant-design/cssinjs": "^1.21.0"
+    "vite-plugin-dts": "^3.9.1"
   },
   "license": "ISC",
   "author": "XiaoPiHong",
