--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -2,6 +2,11 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "xph-crud/*": ["../packages/*"],
+      "xph-crud": ["../packages"],
+      "examples/*": ["../examples/*"]
+    }
   }
 }
