--- a/docs/package.json
+++ b/docs/package.json
@@ -15,22 +15,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.21.0",
+    "@ant-design/icons": "5.3.2",
     "@docusaurus/core": "3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
     "@docusaurus/theme-live-codeblock": "^3.4.0",
     "@mdx-js/react": "^3.0.0",
+    "antd": "^5.14.2",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "lodash-es": "^4.17.21",
     "prism-react-renderer": "^2.3.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.7",
-    "react-shadow": "^20.5.0",
-    "@ant-design/icons": "5.3.2",
-    "antd": "^5.14.2",
-    "dayjs": "^1.11.10",
-    "lodash-es": "^4.17.21"
+    "react-shadow": "^20.5.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
