--- a/docs/package.json
+++ b/docs/package.json
@@ -23,13 +23,14 @@
     "antd": "^5.14.2",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "docusaurus-plugin-sass": "^0.2.5",
     "lodash-es": "^4.17.21",
     "prism-react-renderer": "^2.3.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.7",
-    "react-shadow": "^20.5.0"
+    "sass": "^1.77.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.4.0",
