--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -5,12 +5,12 @@
   "scripts": {},
   "devDependencies": {},
   "dependencies": {
-    "lodash-es": "^4.17.21",
-    "dayjs": "^1.11.13"
+    "lodash-es": "^4.17.21"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "@ant-design/icons": "5.3.2",
-    "antd": "^5.14.2"
+    "antd": "^5.14.2",
+    "dayjs": "^1.11.13"
   }
 }
