--- a/docs/package.json
+++ b/docs/package.json
@@ -37,6 +37,9 @@
     "@docusaurus/module-type-aliases": "3.5.2",
     "@docusaurus/tsconfig": "3.5.2",
     "@docusaurus/types": "3.5.2",
+    "docusaurus-plugin-typedoc": "^1.0.5",
+    "typedoc": "^0.26.9",
+    "typedoc-plugin-markdown": "^4.2.9",
     "typescript": "~5.2.2"
   },
   "browserslist": {
