--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xph-crud",
-  "version": "0.3.7",
+  "version": "0.3.9",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/types/index.d.ts",
@@ -16,7 +16,7 @@
     "docs": "cd docs && npm run start",
     "build:docs": "cd docs && npm run build",
     "version-bump": "node version-bump.mjs",
-    "publish": "npm run version-bump && npm publish",
+    "pub": "npm run version-bump && npm publish",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "files": [
